--- a/ice/styles/style3.css
+++ b/ice/styles/style3.css
@@ -7,12 +7,13 @@ img {
     width: 100%;
     height: 100%;
     z-index: -1;
-    grid-column: 1/2;
+    grid-column: 1/3;
 }
 .gray {
     width: 100%;
     height: 100%;
     background-color: rgb(177, 176, 176);
+    grid-column: 3/5;
     z-index: -1;
     padding-top: 75%;
     font-size: 150px;
@@ -21,16 +22,15 @@ img {
 }
 .grid {
     display: grid;
-    grid-template-columns: 0.5fr 0.5fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 h1 {
     padding-top: 20%;
-    padding-left: 35%;
     font-size: 200px;
     position: absolute;
 }
 .over {
-    grid-column: 1/2;
+    grid-column: 2/4;
     grid-row: 1/2;
     z-index: 4;
     text-align: center;
