--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 #content {
     max-width: 1600px;
     margin: 0 auto;
@@ -7,17 +12,64 @@ nav a, .heroMsg h1, .heroMsg h4,.buttonBox, main section {
 }
 #background{
     height: 725px;
-}
-header{
     background-color: #5ABCB9;
 }
-body{
+header{
     background-color: #399E5A;
 }
-nav {
+body{
+    /*background-color: #399E5A;*/
+}
+nav a {
     background-color: #399E5A;
+    color: black;
+    text-decoration: none;
+
 }
 nav a:hover{
     background-color: #5ABCB9;
     color: #6EF9F5;
+}
+.msg{
+    background-color: #399E5A;
+    color: black;
+}
+.book, .join{
+    background-color: #399E5A;
+    color: black;
+    text-decoration: none;
+}
+.book:hover, .join:hover{
+    background-color: #5ABCB9;
+    color: #6EF9F5;
+}
+footer{
+    background-color: #399E5A;
+    color: black;
+}
+footer p {
+    font-size: 1.2em;
+}
+footer p a:hover{
+    text-decoration: underline;
+}
+footer a {
+    color: black;
+    text-decoration: none;
+}
+footer a:hover {
+    background-color: #5ABCB9;
+    color: #6EF9F5;
+}
+.homeTitle {
+    color: black;
+}
+h4{
+    color: black;
+}
+.icon{
+    width: 80px;
+}
+.heroImg {
+ width: 100%;
 }
